reset styles and wright header

--- a/source/index.html
+++ b/source/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Седона</title>   
-    <link rel="stylesheet" href="source/css/normalize.css"> 
-    <link rel="stylesheet" href="source/css/style.css">
+    <link rel="stylesheet" href="css/normalize.css"> 
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
     <!-- Header start -->
     <header class="page-header">
         <div class="wrapper">
             <div class="page-header__wrapper">
-                <div class="page-header__logo">
+                <!-- <div class="page-header__logo">
                     <a class="page-header__logo-link">
-                       <img src="./source/img/logo-sedona-mobile.svg" width="102" height="84" alt="Логотип Седона">
+                       <img src="./img/logo-sedona-desktop.svg" width="186" height="96" alt="Логотип Седона">
                     </a>
-                </div>
+                </div> -->
             <nav class="main-nav">
                 <!-- <button class="main-nav__toggle" type="button">
                     <span class="visually-hidden">Открыть меню</span>                             
@@ -28,6 +28,11 @@
                   </li>
                   <li class="site-list__item">
                     <a href="photo.html">фото и видео</a>
+                  </li>
+                  <li class="site-list__item"> 
+                    <a class="page-header__logo-link">
+                    <img src="./img/logo-sedona-desktop.svg" width="186" height="96" alt="Логотип Седона">
+                    </a>                   
                   </li>
                   <li class="site-list__item">
                       <a href="form.html">форма отзыва</a>
@@ -55,11 +60,11 @@
     <!-- Intro start -->    
            <section class="intro">
             <div>
-                <img class="page-main__intro-advantages" src="./source/img/text-sedona-index.svg" alt="Добро пожаловать в Седону">
+                <img class="page-main__intro-advantages" src="./img/text-sedona-index.svg" alt="Добро пожаловать в Седону">
             </div>
-                <img src="./source/img/bg-intro-triangle-mobile.svg" alt="">
+                <img src="./img/bg-intro-triangle-mobile.svg" alt="">
             <div class="intro-title">
-                <img src="./source/img/bg-intro-triangle-mobile.svg" alt="">
+                <!-- <img src="./img/bg-intro-triangle-mobile.svg" alt=""> -->
                 <h2>Седона — небольшой городок в аризоне, заслуживающий большего!</h2>
             </div>
             <div>
@@ -70,18 +75,18 @@
 
         <section class="compare_cards">
             <div class="compare_cards-city">
-                <img src="./source/img/bg-triangle.svg" alt="">
+                <img src="./img/bg-triangle.svg" alt="">
                 <h2 class="compare_cards-item">Настоящий городок</h2>
                 <h3 class="compare_cards-number" >— №1 —</h3>
                 <h3 class="compare_cards-causes" >Седона не аттракцион для туристов, там течет своя жизнь</h3>
             </div>
             <div class="image">
-                <img class="image-city" src="./source/img/main-city-mobile@1x.jpg" alt="Город">
+                <img class="image-city" src="./img/main-city-mobile@1x.jpg" alt="Город">
             </div>        
         </section>     
         <section class="info_cards">
             <div class="info_cards-icon">
-                <img class="info_cards-house" src="./source/img/icon-house.svg" alt="иконка дом">
+                <img class="info_cards-house" src="./img/icon-house.svg" alt="иконка дом">
             </div>
             <div>
                 <h2 class="info_cards-title">Жилье</h2>
@@ -92,7 +97,7 @@
         </section> 
         <section class="info_cards">
             <div class="info_cards-icon">
-                <img class="info_cards-gift" src="./source/img/icon-gift.svg" alt="иконка дом">
+                <img class="info_cards-gift" src="./img/icon-gift.svg" alt="иконка дом">
             </div>
             <div>
                 <h2 class="info_cards-title">Сувениры</h2>
@@ -103,7 +108,7 @@
         </section>
         <section class="info_cards">
             <div class="info_cards-icon">
-                <img class="info_cards-food" src="./source/img/icon-burger.svg" alt="иконка дом">          
+                <img class="info_cards-food" src="./img/icon-burger.svg" alt="иконка дом">          
             </div>
             <div>
                 <h2 class="info_cards-title">Еда</h2>
@@ -119,7 +124,7 @@
                 <h3 class="compare_cards-causes">Да, по нему можно пройти! Если вы осмелитесь, конечно</h3>
             </div>
             <div class="image">
-                <img class="image-city" src="./source/img/main-bridge-mobile@1x.jpg" alt="Мост">
+                <img class="image-city" src="./img/main-bridge-mobile@1x.jpg" alt="Мост">
             </div>        
         </section>
         <section class="compare_cards">
@@ -153,8 +158,8 @@
             </div>
         </section>
             <div class="map_mobile">
-                <img src="./source/img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта Седоны">
-                <img class="map_mobile-marker" src="./source/img/icon-map-marker.svg" alt="">
+                <img src="./img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта Седоны">
+                <img class="map_mobile-marker" src="./img/icon-map-marker.svg" alt="">
             </div>
     </main>
 
@@ -172,11 +177,11 @@
         </div>
         <div class="footer_copyright">
            <b>Разработано</b>
-           <img class="footer-logo" src="./source/img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
+           <img class="footer-logo" src="./img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
         </div>
     </footer>
     <!-- Footer end -->
 
-    <script src="./source/js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
