position for intro & title

--- a/source/index.html
+++ b/source/index.html
@@ -59,23 +59,24 @@
            <!-- <h1 class="visually-hidden">Седона - небольшой городок в Аризоне</h1> -->
     <!-- Intro start -->    
            <section class="intro">
-            <div>
-                <img class="page-main__intro-advantages" src="./img/text-sedona-index.svg" alt="Добро пожаловать в Седону">
-            </div>
-                <img src="./img/bg-intro-triangle-mobile.svg" alt="">
-            <div class="intro-title">
-                <!-- <img src="./img/bg-intro-triangle-mobile.svg" alt=""> -->
-                <h2>Седона — небольшой городок в аризоне, заслуживающий большего!</h2>
-            </div>
-            <div>
-                <h3 class="intro-subtitle">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</h3>
-            </div>
+                <div>
+                     <img class="page-main__intro-advantages" src="./img/text-sedona-index.svg" alt="Добро пожаловать в Седону">
+                </div>
+                <div>
+                    <img class="intro-triangle-1" src="./img/bg-intro-triangle-desktop.svg" alt="">
+                </div>   
+                <div>           
+                    <h2 class="intro-title">Седона — небольшой городок в аризоне, заслуживающий большего!</h2>                               
+                    <h3 class="intro-subtitle">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</h3>
+                </div> 
         </section>
     <!-- Intro end -->  
 
         <section class="compare_cards">
             <div class="compare_cards-city">
-                <img src="./img/bg-triangle.svg" alt="">
+                <div>
+                    <img class="intro-triangle-2" src="./img/bg-triangle.svg" alt="">
+                </div>
                 <h2 class="compare_cards-item">Настоящий городок</h2>
                 <h3 class="compare_cards-number" >— №1 —</h3>
                 <h3 class="compare_cards-causes" >Седона не аттракцион для туристов, там течет своя жизнь</h3>
