block compare & info

--- a/source/index.html
+++ b/source/index.html
@@ -70,22 +70,22 @@
                     <h3 class="intro-subtitle">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</h3>
                 </div> 
         </section>
+        <div>
+            <img class="intro-triangle-2" src="./img/bg-triangle.svg" alt="">
+        </div>
     <!-- Intro end -->  
-
+    <section class="compare"> 
         <section class="compare_cards">
-            <div class="compare_cards-city">
-                <div>
-                    <img class="intro-triangle-2" src="./img/bg-triangle.svg" alt="">
-                </div>
+            <div class="compare_cards-city">                
                 <h2 class="compare_cards-item">Настоящий городок</h2>
                 <h3 class="compare_cards-number" >— №1 —</h3>
                 <h3 class="compare_cards-causes" >Седона не аттракцион для туристов, там течет своя жизнь</h3>
-            </div>
-            <div class="image">
-                <img class="image-city" src="./img/main-city-mobile@1x.jpg" alt="Город">
-            </div>        
-        </section>     
-        <section class="info_cards">
+            </div>                    
+        </section>  
+        <div class="compare_image">
+                <img class="image-city" src="./img/main-city-desktop@1x.jpg" alt="Город">
+        </div>   
+        <section class="compare_info_cards">
             <div class="info_cards-icon">
                 <img class="info_cards-house" src="./img/icon-house.svg" alt="иконка дом">
             </div>
@@ -96,18 +96,7 @@
                 <h2 class="info_cards-subtitle">Рекомендуем пожить в настоящем мотеле, все как в кино!</h2>
             </div>
         </section> 
-        <section class="info_cards">
-            <div class="info_cards-icon">
-                <img class="info_cards-gift" src="./img/icon-gift.svg" alt="иконка дом">
-            </div>
-            <div>
-                <h2 class="info_cards-title">Сувениры</h2>
-            </div>
-            <div>
-                <h2 class="info_cards-subtitle">Не только китайского, но и местного производства!</h2>
-            </div>
-        </section>
-        <section class="info_cards">
+        <section class="compare_info_cards">
             <div class="info_cards-icon">
                 <img class="info_cards-food" src="./img/icon-burger.svg" alt="иконка дом">          
             </div>
@@ -118,16 +107,27 @@
                 <h2 class="info_cards-subtitle">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</h2>
             </div>
         </section>
+        <section class="compare_info_cards">
+            <div class="info_cards-icon">
+                <img class="info_cards-gift" src="./img/icon-gift.svg" alt="иконка дом">
+            </div>
+            <div>
+                <h2 class="info_cards-title">Сувениры</h2>
+            </div>
+            <div>
+                <h2 class="info_cards-subtitle">Не только китайского, но и местного производства!</h2>
+            </div>
+        </section>
+        <div class="compare_image">
+                <img class="image-city" src="./img/main-bridge-desktop@1x.jpg" alt="Мост">
+        </div>
         <section class="compare_cards">
             <div class="compare_cards-bridge">
                 <h2 class="compare_cards-item">Там есть мост дьявола</h2>
                 <h3 class="compare_cards-number">— №2 —</h3>
                 <h3 class="compare_cards-causes">Да, по нему можно пройти! Если вы осмелитесь, конечно</h3>
-            </div>
-            <div class="image">
-                <img class="image-city" src="./img/main-bridge-mobile@1x.jpg" alt="Мост">
-            </div>        
-        </section>
+            </div>                   
+        </section>         
         <section class="compare_cards">
             <div class="compare_cards-square">
                 <h2 class="compare_cards-item">Небольшая площадь</h2>
@@ -151,6 +151,7 @@
                 <h3 class="compare_cards-causes">Большинство едет в гранд каньон и толпится там</h3>
             </div>           
         </section>
+    </section>     
         <section class="search">
             <div class="search_cards">
                <h2 class="search_cards-item">Заинтересовались?</h2>            
