--- a/source/index.html
+++ b/source/index.html
@@ -13,11 +13,6 @@
     <header class="page-header">
         <div class="wrapper">
             <div class="page-header__wrapper">
-                <!-- <div class="page-header__logo">
-                    <a class="page-header__logo-link">
-                       <img src="./img/logo-sedona-desktop.svg" width="186" height="96" alt="Логотип Седона">
-                    </a>
-                </div> -->
             <nav class="main-nav">
                 <!-- <button class="main-nav__toggle" type="button">
                     <span class="visually-hidden">Открыть меню</span>                             
@@ -56,7 +51,7 @@
     </header>
     <!-- Header end -->
     <main class="page-main">
-           <!-- <h1 class="visually-hidden">Седона - небольшой городок в Аризоне</h1> -->
+           <h1 class="visually-hidden">Седона - небольшой городок в Аризоне</h1>
     <!-- Intro start -->    
            <section class="intro">
                 <div>
@@ -156,12 +151,12 @@
             <div class="search_cards">
                <h2 class="search_cards-item">Заинтересовались?</h2>            
                <h3 class="search_cards-choice">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</h3>
-               <button type="submit" class="search_button">Найти гостиницу</button>
+               <button type="button" class="search_button">Найти гостиницу</button>
             </div>
         </section>
-            <div class="map_mobile">
-                <img src="./img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта Седоны">
-                <img class="map_mobile-marker" src="./img/icon-map-marker.svg" alt="">
+            <div class="map">                
+                <img class="map-mobile" src="./img/bg-map-desktop@1x.jpg" alt="Карта Седоны">
+                <img class="map-marker" src="./img/icon-map-marker.svg" alt="">
             </div>
     </main>
 
@@ -172,9 +167,9 @@
         </div>
         <div class="">
             <ul class="footer_social">
-               <li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span></a></li>
-               <li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-               <li><a class="social-button" href="#"><span class="visually-hidden">Ютуб</span></a></li>
+               <li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span><img src="./img/icon-twitter.svg"></img></a></li>
+               <li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span><img src="./img/icon-facebook.svg"></img></a></li>
+               <li><a class="social-button" href="#"><span class="visually-hidden">Ютуб</span><img src="./img/icon-youtube.svg"></img></a></li>
             </ul>
         </div>
         <div class="footer_copyright">
