--- a/source/index.html
+++ b/source/index.html
@@ -18,23 +18,27 @@
                     <span class="visually-hidden">Открыть меню</span>                             
                 </button> -->
             <ul class="main-nav__list site-list">
-                  <li class="site-list__item">
+                <li class="site-list__item">
                     <a>главная</a>
-                  </li>
-                  <li class="site-list__item">
+                </li>
+                <li class="site-list__item">
                     <a href="photo.html">фото и видео</a>
-                  </li>
-                  <li class="site-list__item"> 
-                    <a class="page-header__logo-link">
+                </li>
+                  <!-- <li class="site-list__item">                                       
+                  </li> -->
+                <li class="site-list__item">
+                    <a href="form.html">форма отзыва</a>
+                </li>
+                <li class="site-list__item">
+                    <a href="#">HTML Academy</a>
+                </li>
+                <span class="gradient"></span>
+                <a class="page-header__logo-link-1">
                     <img src="./img/logo-sedona-desktop.svg" width="186" height="96" alt="Логотип Седона">
-                    </a>                   
-                  </li>
-                  <li class="site-list__item">
-                      <a href="form.html">форма отзыва</a>
-                  </li>
-                  <li class="site-list__item">
-                      <a href="#">HTML Academy</a>
-                  </li>
+                </a>
+                <a class="page-header__logo-link-2">
+                    <img src="./img/logo-sedona-mobile.svg" width="186" height="84" alt="Логотип Седона">
+                </a>
             </ul>   
                 <div class="main-nav_close">
                   <span class="main-nav_close-line"></span>
@@ -53,21 +57,25 @@
     <main class="page-main">
            <h1 class="visually-hidden">Седона - небольшой городок в Аризоне</h1>
     <!-- Intro start -->    
-           <section class="intro">
-                <div>
-                     <img class="page-main__intro-advantages" src="./img/text-sedona-index.svg" alt="Добро пожаловать в Седону">
-                </div>
-                <div>
-                    <img class="intro-triangle-1" src="./img/bg-intro-triangle-desktop.svg" alt="">
-                </div>   
-                <div>           
-                    <h2 class="intro-title">Седона — небольшой городок в аризоне, заслуживающий большего!</h2>                               
-                    <h3 class="intro-subtitle">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</h3>
-                </div> 
+        <section class="intro">
+            <div>
+                <img class="page-main__intro-advantages" src="./img/text-sedona-index.svg" alt="Добро пожаловать в Седону">
+            </div>
+            <div>
+                <img class="intro-triangle-1" src="./img/bg-intro-triangle-desktop.svg" alt="">
+            </div>
+            <div>
+                <img class="intro-triangle-mobile" src="./img/bg-intro-triangle-mobile.svg" alt="">
+            </div>     
+            <div>           
+                <h2 class="intro-title">Седона — небольшой городок в аризоне, заслуживающий большего!</h2>                               
+                <h3 class="intro-subtitle">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</h3>
+            </div>                
         </section>
         <div>
             <img class="intro-triangle-2" src="./img/bg-triangle.svg" alt="">
         </div>
+        
     <!-- Intro end -->  
     <section class="compare"> 
         <section class="compare_cards">
@@ -157,7 +165,7 @@
             <div class="map">                
                 <img class="map-mobile" src="./img/bg-map-desktop@1x.jpg" alt="Карта Седоны">
                 <img class="map-marker" src="./img/icon-map-marker.svg" alt="">
-            </div>
+            </div>            
     </main>
 
     <!-- Footer start -->
@@ -165,13 +173,13 @@
         <div class="footer_visit">
             <h2 class="footer_visit-title">#visitsedona</h2>
         </div>
-        <div class="">
+        <div> 
             <ul class="footer_social">
                <li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span><img src="./img/icon-twitter.svg"></img></a></li>
                <li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span><img src="./img/icon-facebook.svg"></img></a></li>
                <li><a class="social-button" href="#"><span class="visually-hidden">Ютуб</span><img src="./img/icon-youtube.svg"></img></a></li>
             </ul>
-        </div>
+        </div>        
         <div class="footer_copyright">
            <b>Разработано</b>
            <img class="footer-logo" src="./img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
