--- a/source/index.html
+++ b/source/index.html
@@ -24,8 +24,6 @@
                 <li class="site-list__item">
                     <a href="photo.html">фото и видео</a>
                 </li>
-                  <!-- <li class="site-list__item">                                       
-                  </li> -->
                 <li class="site-list__item">
                     <a href="form.html">форма отзыва</a>
                 </li>
@@ -58,23 +56,23 @@
            <h1 class="visually-hidden">Седона - небольшой городок в Аризоне</h1>
     <!-- Intro start -->    
         <section class="intro">
-            <div>
-                <img class="page-main__intro-advantages" src="./img/text-sedona-index.svg" alt="Добро пожаловать в Седону">
+            <div class="page-main__intro-advantages">
+                <img src="./img/text-sedona-index.svg" alt="Добро пожаловать в Седону">
             </div>
-            <div>
-                <img class="intro-triangle-1" src="./img/bg-intro-triangle-desktop.svg" alt="">
+            <div class="intro-triangle-1">
+                <img src="./img/bg-intro-triangle-desktop.svg" alt="">
             </div>
-            <div>
-                <img class="intro-triangle-mobile" src="./img/bg-intro-triangle-mobile.svg" alt="">
+            <div class="intro-triangle-mobile">
+                <img src="./img/bg-intro-triangle-mobile.svg" alt="">
             </div>     
             <div>           
                 <h2 class="intro-title">Седона — небольшой городок в аризоне, заслуживающий большего!</h2>                               
                 <h3 class="intro-subtitle">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</h3>
-            </div>                
+            </div>     
+            <div class="intro-triangle-2">
+            <img src="./img/bg-triangle.svg" alt="">
+            </div>           
         </section>
-        <div>
-            <img class="intro-triangle-2" src="./img/bg-triangle.svg" alt="">
-        </div>
         
     <!-- Intro end -->  
     <section class="compare"> 
