adress url with .

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 </li>
                 <span class="gradient"></span>
                 <a class="page-header__logo-link-1">
-                    <img src="./img/logo-sedona-desktop.svg" width="186" height="96" alt="Логотип Седона">
+                    <img src="/img/logo-sedona-desktop.svg" width="186" height="96" alt="Логотип Седона">
                 </a>
                 <a class="page-header__logo-link-2">
-                    <img src="./img/logo-sedona-mobile.svg" width="186" height="84" alt="Логотип Седона">
+                    <img src="/img/logo-sedona-mobile.svg" width="186" height="84" alt="Логотип Седона">
                 </a>
             </ul>   
                 <div class="main-nav_close">
@@ -59,20 +59,20 @@
     <!-- Intro start -->    
         <section class="intro">
             <div class="page-main__intro-advantages">
-                <img src="./img/text-sedona-index.svg" alt="Добро пожаловать в Седону">
+                <img src="/img/text-sedona-index.svg" alt="Добро пожаловать в Седону">
             </div>
             <div class="intro-triangle-1">
-                <img src="./img/bg-intro-triangle-desktop.svg" alt="">
+                <img src="/img/bg-intro-triangle-desktop.svg" alt="">
             </div>
             <div class="intro-triangle-mobile">
-                <img src="./img/bg-intro-triangle-mobile.svg" alt="">
+                <img src="/img/bg-intro-triangle-mobile.svg" alt="">
             </div>     
             <div>           
                 <h2 class="intro-title">Седона — небольшой городок в аризоне, заслуживающий большего!</h2>                               
                 <h3 class="intro-subtitle">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</h3>
             </div>     
             <div class="intro-triangle-2">
-                <img src="./img/bg-triangle.svg" alt="">
+                <img src="/img/bg-triangle.svg" alt="">
             </div>           
         </section>
     <!-- Intro end -->
@@ -86,11 +86,11 @@
                 </div>                    
             </section>  
             <div class="compare_image">
-                    <img class="image-city" src="./img/main-city-desktop@1x.jpg" alt="Город">
+                    <img class="image-city" src="/img/main-city-desktop@1x.jpg" alt="Город">
             </div>   
             <section class="compare_info_cards">
                 <div class="info_cards-icon">
-                    <img class="info_cards-house" src="./img/icon-house.svg" alt="иконка дом">
+                    <img class="info_cards-house" src="/img/icon-house.svg" alt="иконка дом">
                 </div>
                 <div>
                     <h2 class="info_cards-title">Жилье</h2>
@@ -101,7 +101,7 @@
             </section> 
             <section class="compare_info_cards">
                 <div class="info_cards-icon">
-                    <img class="info_cards-food" src="./img/icon-burger.svg" alt="иконка дом">          
+                    <img class="info_cards-food" src="/img/icon-burger.svg" alt="иконка дом">          
                 </div>
                 <div>
                     <h2 class="info_cards-title">Еда</h2>
@@ -112,7 +112,7 @@
             </section>
             <section class="compare_info_cards">
                 <div class="info_cards-icon">
-                    <img class="info_cards-gift" src="./img/icon-gift.svg" alt="иконка дом">
+                    <img class="info_cards-gift" src="/img/icon-gift.svg" alt="иконка дом">
                 </div>
                 <div>
                     <h2 class="info_cards-title">Сувениры</h2>
@@ -122,7 +122,7 @@
                 </div>
             </section>
             <div class="compare_image">
-                    <img class="image-city" src="./img/main-bridge-desktop@1x.jpg" alt="Мост">
+                    <img class="image-city" src="/img/main-bridge-desktop@1x.jpg" alt="Мост">
             </div>
             <section class="compare_cards">
                 <div class="compare_cards-bridge">
@@ -163,8 +163,8 @@
             </div>
         </section>
             <div class="map">                
-                <img class="map-mobile" src="./img/bg-map-desktop@1x.jpg" alt="Карта Седоны">
-                <img class="map-marker" src="./img/icon-map-marker.svg" alt="">
+                <img class="map-mobile" src="/img/bg-map-desktop@1x.jpg" alt="Карта Седоны">
+                <img class="map-marker" src="/img/icon-map-marker.svg" alt="">
             </div>            
     </main>
 
@@ -182,11 +182,11 @@
         </div>        
         <div class="footer_copyright">
            <b>Разработано</b>
-           <img class="footer-logo" src="./img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
+           <img class="footer-logo" src="/img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
         </div>
     </footer>
     <!-- Footer end -->
 
-    <script src="./js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
