--- a/source/index.html
+++ b/source/index.html
@@ -86,7 +86,11 @@
                 </div>                    
             </section>  
             <div class="compare_image">
+                <picture>
+                    <source media="(min-width: 769px)" srcset="img/main-city-tablet@1x.jpg">
+                    <source media="(min-width: 321px)" srcset="img/main-city-mobile@1x.jpg">
                     <img class="image-city" src="./img/main-city-desktop@1x.jpg" alt="Город">
+                </picture>    
             </div>   
             <section class="compare_info_cards">
                 <div class="info_cards-icon">
@@ -122,7 +126,11 @@
                 </div>
             </section>
             <div class="compare_image">
+                <picture>
+                    <source media="(min-width: 769px)" srcset="img/main-bridge-tablet@1x.jpg">
+                    <source media="(min-width: 321px)" srcset="img/main-bridge-mobile@1x.jpg">
                     <img class="image-city" src="./img/main-bridge-desktop@1x.jpg" alt="Мост">
+                </picture>    
             </div>
             <section class="compare_cards">
                 <div class="compare_cards-bridge">
